--- a/styles/about.css
+++ b/styles/about.css
@@ -1,51 +1,38 @@
-/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
-
 body {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 14px;
-	background-image: url("../images/background2.jpg");
-	color: #FFFFFF;
-	margin: 0;
-	padding:0;
-	height: 100%;
-	overflow: hidden;
-	max-width: 100%
+  font-size: 14px;
+  color: #FFFFFF;
+  margin: 0;
+  padding:0;
+  height: 100%;
 }
 
 header {
-	font-family: 'Roboto Slab', serif;
-	font-size: 15px;
-	color: #FFFFFF;
-	position: absolute;
-	left: 10px;
-	top:-10px;
-	letter-spacing:1px;
-	font-weight:200;
-	width: 100%;
-	height: 60px;
+  font-size: 15px;
+  position: absolute;
+  left: 10px;
+  top:-10px;
+  white-space: nowrap;
 }
 
-#footer {
-	width: 100%;
-	height: 45px;
-	position: absolute;
-	bottom:0;
-	background: #333;
-	border-top:1px solid;
-	overflow:hidden;
+footer{
+  position: fixed;
+  width: 100%;
+  height: 45px;
+  background: #333;
+  border-top:1px solid;
+  overflow:hidden;
+  bottom: 0px;
 }
-
-/*--Start Navigation Bar--*/
 
 /* Remove default link settings*/
 a {
-	text-decoration: none;
-	color: #FFFFFF;
-	padding: 0px;
-	font-weight: bold;
-	font-size: 20px;
-	color: #FFFFFF;
-	position: relative;
+  text-decoration: none;
+  color: #FFFFFF;
+  padding: 0px;
+  font-weight: bold;
+  font-size: 20px;
+  color: #FFFFFF;
+  position: relative;
 }
 
 /*Create the navigation bar*/
@@ -60,8 +47,8 @@ ul.navigation {
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
 ul.navigation li {
-padding-left:300px;
-display:inline-block;
+  padding-left:300px;
+  display:inline-block;
 }
 
 /*Spacing and organising the list*/
@@ -76,109 +63,87 @@ ul.navigation li a {
 
 }
 
-
 /*Menu icon is hidden when the page is over the limit specified*/
 ul.navigation li.icon {
-	display: none;
+  display: none;
 }
 
-/*Whilst the width is below 480px do the following*/
-@media screen and (max-width:530px) {
 
-/*Hide the links into the menu*/
-ul.navigation li
-  {
-  	display: none;
-  	padding-left: 0px;
+/*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
+
+/*Whilst the width is below 600px do the following*/
+@media screen and (max-width:600px) {
+
+  body{
+    overflow:hidden;
+    background-image: url("../images/background2.jpg");
   }
 
-/*Display the menu expanding icon to the right*/
+  ul.navigation {
+    min-width:300px;
+    max-width: 600px;
+  }
+
+  /*Hide the links into the menu*/
+  ul.navigation li
+  {
+    display: none;
+    padding-left: 0px;
+  }
+
+  /*Display the menu expanding icon to the right*/
   ul.navigation li.icon {
     float: right;
     display: inline-block;
   }
 
-/*--Responsive settings--*/
+  /*--Responsive settings--*/
 
-/*How the list should be displayed one the expand button is clicked*/
+  /*How the list should be displayed one the expand button is clicked*/
 
- ul.navigation.responsive{
-  	position: relative;
-  	padding-top:60px;
-  	width: 100%;
+  ul.navigation.responsive{
+    position: relative;
+    padding-top:60px;
+    width: 100%;
+    background-color: rgba(255,255,255,0.1);
   }
 
- ul.navigation.responsive li.icon {
+  ul.navigation.responsive li.icon {
     position: absolute;
     right: 0;
     top: 0;
   }
 
- ul.navigation.responsive li {
+  ul.navigation.responsive li {
     float: none;
     display: inline;
   }
 
- ul.navigation.responsive li a {
+  ul.navigation.responsive li a {
     display: block;
     text-align: center;
   }
 
 }
 
-/*--End Navigation Bar--*/
 
-
-/*---------------------------------------------------------------------END MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
 
 /*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
-@media screen and (min-width: 530px) and (max-width: 940px) {
 
+/*Whilst the width is between 600px and 940px do the following*/
+@media screen and (min-width: 600px) and (max-width: 940px){
 
-/*Create the navigation bar*/
-ul.navigation {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  max-width: 1000px;
-  min-width: 1000px;
-}
+  ul.navigation {
+    max-width: 1000px;
+    min-width: 1000px;
+  }
 
-/*Arrange the items in the navigation bar (Move to the right and display inline)*/
-ul.navigation li {
-padding-left:60px;
-display:inline-block;
-}
-
-/*Spacing and organising the list*/
-ul.navigation li a {
-  display: inline-block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  transition: 0.3s;
-  font-size: 17px;
- 
-}
-
-#footer {
-	width: 130%;
-	height: 45px;
-	position: absolute;
-	bottom:0;
-	background: #333;
-	border-top:1px solid;
-	overflow:hidden;
-}
-
+  ul.navigation li {
+    padding-left:80px;
+  }
 
 }
-
-/*---------------------------------------------------------------------END IPAD/TABLET-VERSION!----------------------------------------------------------------------------------*/
 
 
 
@@ -186,37 +151,20 @@ ul.navigation li a {
 
 /*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
 
-@media screen and (min-width: 950px) {
+/*Whilst the width is above 940px do the following*/
+@media screen and (min-width: 940px) {
 
+  ul.navigation li a:hover{
+    background-color: #555;
+  }
 
-ul.navigation {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  max-width: 2000px;
-  min-width: 2000px;
-}
+  ul.navigation {
+    max-width: 2000px;
+    min-width: 2000px;
+  }
 
-/*Adding a hover effect*/
-ul.navigation li a:hover {
-	background-color: #555;
-}
-
-
-/*Footer*/
-#footer {
-	width: 100%;
-	height: 45px;
-	position: absolute;
-	bottom:0;
-	background: #333;
-	border-top:1px solid;
-}
 
 
 }
 
 
-/*---------------------------------------------------------------------END GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
