--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -5,7 +5,6 @@ body {
 	margin: 0;
 	padding:0;
 	height: 100%;
-	overflow: hidden;
 }
 
 header {
@@ -13,16 +12,17 @@ header {
 	position: absolute;
 	left: 10px;
 	top:-10px;
+	white-space: nowrap;
 }
 
-#footer {
+footer{
+	position: fixed;
 	width: 100%;
 	height: 45px;
-	position: absolute;
-	bottom:0;
 	background: #333;
 	border-top:1px solid;
 	overflow:hidden;
+	bottom: 0px;
 }
 
 /*--Button Links--*/
@@ -52,8 +52,6 @@ a.Social{
 
 }
 
-
-/*--Start Navigation Bar--*/
 
 /* Remove default link settings*/
 a {
@@ -94,7 +92,6 @@ ul.navigation li a {
 
 }
 
-
 /*Menu icon is hidden when the page is over the limit specified*/
 ul.navigation li.icon {
 	display: none;
@@ -104,9 +101,18 @@ ul.navigation li.icon {
 
 /*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
-/*Whilst the width is below 530px do the following*/
-@media screen and (max-width:530px) {
+/*Whilst the width is below 600px do the following*/
+@media screen and (max-width:600px) {
 
+	body{
+		overflow:hidden;
+		background-image: url("../images/background2.jpg");
+	}
+
+	ul.navigation {
+		min-width:300px;
+		max-width: 600px;
+	}
 
 	/*Hide the links into the menu*/
 	ul.navigation li
@@ -129,6 +135,7 @@ ul.navigation li.icon {
 		position: relative;
 		padding-top:60px;
 		width: 100%;
+		background-color: rgba(255,255,255,0.1);
 	}
 
 	ul.navigation.responsive li.icon {
@@ -150,15 +157,12 @@ ul.navigation li.icon {
 }
 
 
-/*---------------------------------------------------------------------END MOBILE-VERSION!----------------------------------------------------------------------------------*/
-
-
-
-
 
 
 /*---------------------------------------------------------------------IPAD/TABLET VERSION!----------------------------------------------------------------------------------*/
-@media screen and (min-width: 530px) and (max-width: 940px) {
+
+/*Whilst the width is between 600px and 940px do the following*/
+@media screen and (min-width: 600px) and (max-width: 940px){
 
 	header {
 		font-size: 28px;
@@ -182,15 +186,14 @@ ul.navigation li.icon {
 
 }
 
-/*---------------------------------------------------------------------END IPAD/TABLET-VERSION!----------------------------------------------------------------------------------*/
-
 
 
 
 
 /*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
 
-@media screen and (min-width: 950px) {
+/*Whilst the width is above 940px do the following*/
+@media screen and (min-width: 940px) {
 
 	header {
 		font-size: 40px;
@@ -200,13 +203,12 @@ ul.navigation li.icon {
 	}
 
 
-	/* Buttons */
 	.buttons{
 		left: 750px;
 		top: 500px;
 	}
 
-
+	/*Add hover effects to the buttons and navigation*/
 	a.CV:hover{
 		background-color: #FFFFFF;
 		color:black;
@@ -218,14 +220,16 @@ ul.navigation li.icon {
 		color:black;
 	}
 
-
-	/*Adding a hover effect*/
-	ul.navigation li a:hover {
+	ul.navigation li a:hover{
 		background-color: #555;
+	}
+
+	ul.navigation {
+		max-width: 2000px;
+		min-width: 2000px;
 	}
 
 
 
 }
 
-/*---------------------------------------------------------------------END GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
