--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,7 @@
 body {
   font-size: 14px;
   color: #FFFFFF;
+  background-color: #4f4a4a;
   margin: 0;
   padding:0;
   height: 100%;
@@ -24,6 +25,7 @@ footer{
   bottom: 0px;
 }
 
+
 /* Remove default link settings*/
 a {
   text-decoration: none;
@@ -43,6 +45,7 @@ ul.navigation {
   overflow: hidden;
   background-color: #333;
   border-bottom:1px solid;
+
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -60,13 +63,82 @@ ul.navigation li a {
   text-decoration: none;
   transition: 0.3s;
   font-size: 21px;
-
-
 }
 
 /*Menu icon is hidden when the page is over the limit specified*/
 ul.navigation li.icon {
   display: none;
+}
+
+
+
+p.animation{
+  font-family: "Times New Roman", Times, serif;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 0 0 100px;
+  position: relative;
+  top:250px;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 120em;
+  display: inline-block;
+  animation: type 1s steps(60, end); 
+}
+
+p:nth-child(3){
+  animation: type2 2s steps(80, end);
+}
+
+p:nth-child(4){
+  animation: type3 4s steps(80, end);
+}
+
+p:nth-child(5){
+  animation: type4 8s steps(80, end);
+}
+
+
+p a{
+  color: lime;
+  text-decoration: none;
+}
+
+span{
+  animation: blink 1s infinite;
+}
+
+
+
+@keyframes type{ 
+  from { width: 0; } 
+} 
+
+@keyframes type2{
+  0%{width: 0;}
+  50%{width: 0;}
+  100%{ width: 100; } 
+}
+
+@keyframes type3{
+  0%{width: 0;}
+  50%{width: 0;}
+  100%{ width: 100; } 
+} 
+
+@keyframes type4{
+  0%{width: 0;}
+  50%{width: 0;}
+  100%{ width: 100; } 
+} 
+
+
+@keyframes blink{
+  to{opacity: .0;}
+}
+
+::selection{
+  background: black;
 }
 
 
@@ -77,7 +149,6 @@ ul.navigation li.icon {
 
   body{
     overflow:hidden;
-    background-image: url("../images/background2.jpg");
   }
 
   ul.navigation {
