--- a/styles/social.css
+++ b/styles/social.css
@@ -1,6 +1,6 @@
 body {
   color: #FFFFFF;
-  background-color: #FAF0E6;
+  background-color: #4f4a4a;
   margin: 0;
   padding:0;
   height: 100%;
@@ -78,7 +78,7 @@ ul.navigation li.icon {
   background-size: 1350px 802px;
   background-repeat: no-repeat;
   background-position: center;
-  -webkit-transition: background 1s ;
+  -webkit-transition: background 3s;
 }
 
 #slider:after
@@ -127,27 +127,25 @@ h2
 
 
 #fblogo{
-  width:20%;
-  position: relative;
-  left:760px;
+  position: absolute;
+  left:780px;
   top:200px;
   border:3px solid #021a40;
 }
 
 #lilogo{
-  width:20%;
-  position: relative;
-  left:370px;
-  top:450px;
+  position: absolute;
+  left:780px;
+  top:400px;
   border:3px solid #021a40;
 }
 
 #inlogo{
-  width:20%;
-  position: relative;
-  left:-20px;
-  top:700px;
-  border:3px solid #021a40;
+ position: absolute;
+ left:780px;
+ top:600px;
+ border:3px solid #021a40;
+
 }
 
 
@@ -157,8 +155,7 @@ h2
 @media screen and (max-width:600px) {
 
   body{
-
-    overflow:hidden;
+    overflow-x:hidden;
   }
 
   ul.navigation {
@@ -207,6 +204,58 @@ h2
     text-align: center;
   }
 
+  #slider
+  {
+    height: 600px;
+    background-size: 970px 300px;
+  }
+
+  #slider:after
+  {
+    top: 230px;
+    left: 0px;
+    width: 100%;
+    height: 310px;
+  }
+
+  #left
+  {
+    margin: 270px 10px;
+  }
+
+  #right
+  {
+    margin: 270px 10px;
+  }
+
+  h2
+  {
+    font-size: 24px;
+    padding-top:290px;
+  }
+
+  header{
+    font-size: 15px;
+    left:90px;
+    top:680px;
+  }
+
+  #fblogo{
+    left:140px;
+    top:150px;
+  }
+
+  #lilogo{
+    left:140px;
+    top:350px;
+  }
+
+  #inlogo{
+    left:140px;
+    top:550px;
+  }
+
+
 }
 
 
@@ -226,6 +275,63 @@ h2
     padding-left:80px;
   }
 
+  #slider
+  {
+    height: 500px;
+    background-size: 770px 800px;
+  }
+
+  #slider:after
+  {
+    top: 84px;
+    left: 45px;
+    width: 89.7%;
+    height: 503px;
+  }
+
+  #left
+  {
+    margin: 210px 50px;
+  }
+
+  #right
+  {
+    margin: 210px 50px;
+  }
+
+  h2
+  {
+    font-size: 36px;
+    padding-top:210px;
+  }
+
+  header{
+    font-size: 18px;
+    left:170px;
+    top:680px;
+  }
+
+  #fblogo{
+    left:250px;
+    top:200px;
+  }
+
+  #lilogo{
+    left:250px;
+    top:400px;
+  }
+
+  #inlogo{
+    left:250px;
+    top:600px;
+  }
+
+  footer{
+    min-width: 1000px;
+    max-width: 1000px;
+  }
+
+
 }
 
 
@@ -236,10 +342,6 @@ h2
 /*Whilst the width is above 940px do the following*/
 @media screen and (min-width: 940px) {
 
-  body{
-    background-color: #4f4a4a;
-    overflow-x:hidden;
-  }
 
   ul.navigation li a:hover{
     background-color: #555;
@@ -248,6 +350,11 @@ h2
   ul.navigation {
     max-width: 2000px;
     min-width: 2000px;
+  }
+
+  footer{
+    min-width: 2000px;
+    max-width: 2000px;
   }
 
 
