--- a/styles/about.css
+++ b/styles/about.css
@@ -7,14 +7,6 @@ body {
   height: 100%;
 }
 
-header {
-  font-size: 15px;
-  position: absolute;
-  left: 10px;
-  top:-10px;
-  white-space: nowrap;
-}
-
 footer{
   position: fixed;
   width: 100%;
@@ -45,7 +37,6 @@ ul.navigation {
   overflow: hidden;
   background-color: #333;
   border-bottom:1px solid;
-
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -74,59 +65,59 @@ ul.navigation li.icon {
 
 p.animation{
   font-family: "Times New Roman", Times, serif;
-  font-size: 20px;
+  font-size: 21px;
   font-weight: bold;
-  margin: 10px 0 0 100px;
+  margin: 20px 0 0 100px;
   position: relative;
   top:250px;
-  white-space: nowrap;
   overflow: hidden;
-  width: 120em;
-  display: inline-block;
-  animation: type 1s steps(60, end); 
+  animation: type 3s steps(60, end); 
 }
 
 p:nth-child(3){
-  animation: type2 2s steps(80, end);
+  animation: type2 5s steps(80, end);
 }
 
 p:nth-child(4){
-  animation: type3 4s steps(80, end);
+  animation: type3 7s steps(80, end);
 }
 
 p:nth-child(5){
-  animation: type4 8s steps(80, end);
+  animation: type4 9s steps(80, end);
 }
 
-
-p a{
-  color: lime;
-  text-decoration: none;
-}
 
 span{
   animation: blink 1s infinite;
 }
 
 
-
 @keyframes type{ 
+  0% {opacity: 0;}
+  100% {opacity: 1;}
   from { width: 0; } 
 } 
 
 @keyframes type2{
+  0% {opacity: 0;}
+  100% {opacity: 1;}
   0%{width: 0;}
   50%{width: 0;}
   100%{ width: 100; } 
+
 }
 
 @keyframes type3{
+  0% {opacity: 0;}
+  100% {opacity: 1;}
   0%{width: 0;}
   50%{width: 0;}
   100%{ width: 100; } 
 } 
 
 @keyframes type4{
+  0% {opacity: 0;}
+  100% {opacity: 1;}
   0%{width: 0;}
   50%{width: 0;}
   100%{ width: 100; } 
@@ -196,6 +187,12 @@ span{
     text-align: center;
   }
 
+  p.animation{
+  margin: 10px 0 0 10px;
+  font-size: 14px;
+  top:50px;
+}
+
 }
 
 
@@ -206,17 +203,26 @@ span{
 /*Whilst the width is between 600px and 940px do the following*/
 @media screen and (min-width: 600px) and (max-width: 940px){
 
+  body{
+    overflow:hidden;
+  }
+
+
   ul.navigation {
-    max-width: 1000px;
-    min-width: 1000px;
+    min-width: 940px;
+    max-width: 940px;
   }
 
   ul.navigation li {
     padding-left:80px;
   }
 
-}
+  p.animation{
+    font-size: 20px;
+    margin: 10px  0 0 10px;
+  }
 
+}
 
 
 
@@ -231,8 +237,8 @@ span{
   }
 
   ul.navigation {
-    max-width: 2000px;
-    min-width: 2000px;
+    min-width: 2500px;
+    max-width: 2500px;
   }
 
 
