--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,18 +1,12 @@
 body {
   font-size: 14px;
   color: #FFFFFF;
+  background-color: #4f4a4a;
   margin: 0;
   padding:0;
   height: 100%;
 }
 
-header {
-  font-size: 15px;
-  position: absolute;
-  left: 10px;
-  top:-10px;
-  white-space: nowrap;
-}
 
 footer{
   position: fixed;
@@ -69,6 +63,63 @@ ul.navigation li.icon {
 }
 
 
+#wrapper {
+  width: 700px;
+  padding: 150px 50px 20px 50px;
+  margin: 20px auto;
+}
+
+#contact {
+  width: 600px;
+  margin-top: 25px;
+}
+
+#contact input, #contact textarea {
+  padding: 5px;
+  width: 470px;
+  font-size: 1.4em;
+  margin: 0px 0px 40px 0px;
+  border: 2px solid #ccc;
+}
+
+#contact textarea {
+  height: 100px;
+}
+
+#contact textarea:focus, #contact input:focus {
+  border: 2px solid #900;
+}
+
+#contact input.button {
+  width: 100px;
+  float: right;
+}
+
+label {
+  float: left;
+  text-align: right;
+  margin-right: 10px;
+  width: 90px;
+  padding-top: 5px;
+  font-size: 22px;
+}
+
+.message{
+  font-size: 20px;
+  position: relative;
+  top:300px;
+  text-align: center;
+}
+
+.return{
+  position: relative;
+  top:300px;
+  left:-10px;
+  text-align: center;
+  text-decoration: underline;
+}
+
+
 /*---------------------------------------------------------------------MOBILE-VERSION!----------------------------------------------------------------------------------*/
 
 /*Whilst the width is below 600px do the following*/
@@ -76,7 +127,14 @@ ul.navigation li.icon {
 
   body{
     overflow:hidden;
-    background-image: url("../images/background2.jpg");
+  }
+
+  p{
+    width:35em;
+  }
+
+  .return{
+    left:50px;
   }
 
   ul.navigation {
@@ -103,7 +161,7 @@ ul.navigation li.icon {
 
   ul.navigation.responsive{
     position: relative;
-    padding-top:60px;
+    padding-top:0px;
     width: 100%;
     background-color: rgba(255,255,255,0.1);
   }
@@ -122,6 +180,38 @@ ul.navigation li.icon {
   ul.navigation.responsive li a {
     display: block;
     text-align: center;
+  }
+
+
+  #wrapper {
+    width: 700px;
+    padding: 50px 50px 20px 50px;
+    margin: 20px auto;
+  }
+
+  #contact {
+    width: 600px;
+    margin-top: 25px;
+  }
+
+  #contact input, #contact textarea {
+    width: 300px;
+    font-size: 1em;
+    margin: 0px 0px 40px 90px;
+  }
+
+  #contact input.button {
+    width: 100px;
+    position: relative;
+    left:-200px;
+  }
+
+  label {
+    left:0px;
+    margin-right: 30px;
+    width: 70px;
+    padding-top: 5px;
+    font-size: 15px;
   }
 
 }
