--- a/styles/about.css
+++ b/styles/about.css
@@ -1,18 +1,16 @@
 body {
-  font-size: 14px;
+  font-size: 16px;
   color: #FFFFFF;
-  background-color: #4f4a4a;
+  background-color: #e8e5e5;
   margin: 0;
-  padding:0;
-  height: 100%;
 }
 
 footer{
   position: fixed;
   width: 100%;
   height: 45px;
-  background: #333;
-  border-top:1px solid;
+  background-color: #393939;
+  border-top:2px solid;
   overflow:hidden;
   bottom: 0px;
 }
@@ -35,8 +33,8 @@ ul.navigation {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
-  border-bottom:1px solid;
+  background-color: #393939;
+  border-bottom:2px solid;
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -63,10 +61,12 @@ ul.navigation li.icon {
 
 
 
+/*Animation settings for each paragraph*/
 p.animation{
   font-family: "Times New Roman", Times, serif;
   font-size: 21px;
   font-weight: bold;
+  color:#494646;
   margin: 20px 0 0 100px;
   position: relative;
   top:250px;
@@ -74,6 +74,7 @@ p.animation{
   animation: type 3s steps(60, end); 
 }
 
+/*Time after which each line should be displayed*/
 p:nth-child(3){
   animation: type2 5s steps(80, end);
 }
@@ -86,7 +87,7 @@ p:nth-child(5){
   animation: type4 9s steps(80, end);
 }
 
-
+/*Blinking line at the end of the animation - typewriter effect*/
 span{
   animation: blink 1s infinite;
 }
@@ -188,10 +189,10 @@ span{
   }
 
   p.animation{
-  margin: 10px 0 0 10px;
-  font-size: 14px;
-  top:50px;
-}
+    margin: 10px 0 0 10px;
+    font-size: 14px;
+    top:50px;
+  }
 
 }
 
@@ -232,8 +233,9 @@ span{
 /*Whilst the width is above 940px do the following*/
 @media screen and (min-width: 940px) {
 
+  /*Adding a hover effect*/
   ul.navigation li a:hover{
-    background-color: #555;
+    background-color: #FF9900;
   }
 
   ul.navigation {
