--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -1,26 +1,26 @@
 body {
-	font-size: 14px;
-	background-image: url("../images/background.jpg");
+	font-size: 16px;
 	color: #FFFFFF;
+	background-color: #393939;
 	margin: 0;
-	padding:0;
-	height: 100%;
 }
 
 header {
-	font-size: 15px;
+	font-size: 40px;
 	position: absolute;
-	left: 10px;
-	top:-10px;
+	color:#FFFFFF;
+	left: 600px;
+	top:300px;
 	white-space: nowrap;
+	font-weight:700;
 }
 
 footer{
 	position: fixed;
 	width: 100%;
 	height: 45px;
-	background: #333;
-	border-top:1px solid;
+	background-color: #393939;
+	border-top:2px solid;
 	overflow:hidden;
 	bottom: 0px;
 }
@@ -29,8 +29,8 @@ footer{
 .buttons{
 	font-size: 34px;
 	position: absolute;
-	left: 20px;
-	top: 280px;
+	left: 750px;
+	top: 500px;
 	max-width: 500px;
 	min-width: 500px;
 }
@@ -40,7 +40,6 @@ a.CV{
 	border: 2px solid white;
 	padding:20px;
 	box-sizing: border-box; 
-	
 }
 
 
@@ -70,8 +69,8 @@ ul.navigation {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #333;
-	border-bottom:1px solid;
+	background-color: #393939;
+	border-bottom:2px solid;
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -89,7 +88,6 @@ ul.navigation li a {
 	text-decoration: none;
 	transition: 0.3s;
 	font-size: 21px;
-	
 }
 
 /*Menu icon is hidden when the page is over the limit specified*/
@@ -106,10 +104,16 @@ ul.navigation li.icon {
 
 	body{
 		overflow:hidden;
-		background-image: url("../images/background2.jpg");
+	}
+
+	header {
+		font-size: 18px;
+		left: 20px;
+		top:250px;
 	}
 
 	ul.navigation {
+		margin:0px;
 		min-width:300px;
 		max-width: 600px;
 	}
@@ -133,7 +137,7 @@ ul.navigation li.icon {
 
 	ul.navigation.responsive{
 		position: relative;
-		padding-top:60px;
+		padding-top:0px;
 		width: 100%;
 		background-color: rgba(255,255,255,0.1);
 	}
@@ -152,6 +156,12 @@ ul.navigation li.icon {
 	ul.navigation.responsive li a {
 		display: block;
 		text-align: center;
+	}
+
+	.buttons{
+		font-size: 24px;
+		left: 30px;
+		top: 360px;
 	}
 
 }
@@ -188,48 +198,31 @@ ul.navigation li.icon {
 
 
 
-
-
-/*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!-----------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------GLOBAL/DESKTOP VERSION!--------------------------------------------------------------------------------*/
 
 /*Whilst the width is above 940px do the following*/
 @media screen and (min-width: 940px) {
 
-	header {
-		font-size: 40px;
-		left: 600px;
-		top: 300px;
-		font-weight:700;
-	}
-
-
-	.buttons{
-		left: 750px;
-		top: 500px;
-	}
-
 	/*Add hover effects to the buttons and navigation*/
 	a.CV:hover{
-		background-color: #FFFFFF;
+		background-color: #FF9900;
 		color:black;
 	}
 
 
 	a.Social:hover{
-		background-color: #FFFFFF;
+		background-color: #FF9900;
 		color:black;
 	}
 
 	ul.navigation li a:hover{
-		background-color: #555;
+		background-color: #FF9900;
 	}
 
 	ul.navigation {
 		max-width: 2000px;
 		min-width: 2000px;
 	}
-
-
 
 }
 
