--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,11 +1,9 @@
 /*General styles that will be applied*/
 body {
-	font-size: 14px;
-	background-color: #514b4b;
+	font-size: 16px;
 	color: #FFFFFF;
+	background-color:#404040;
 	margin: 0;
-	padding:0;
-	height: 100%;
 }
 
 header {
@@ -21,8 +19,8 @@ footer{
 	position: fixed;
 	width: 100%;
 	height: 45px;
-	background: #333;
-	border-top:1px solid;
+	background-color: #393939;
+	border-top:2px solid;
 	overflow:hidden;
 	bottom: 0px;
 }
@@ -45,8 +43,8 @@ ul.navigation {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #333;
-	border-bottom:1px solid;
+	background-color: #393939;
+	border-bottom:2px solid;
 }
 
 /*Arrange the items in the navigation bar (Move to the right and display inline)*/
@@ -64,7 +62,6 @@ ul.navigation li a {
 	text-decoration: none;
 	transition: 0.3s;
 	font-size: 21px;
-
 }
 
 /*Menu icon is hidden when the page is over the limit specified*/
@@ -103,7 +100,6 @@ ul.navigation li.icon {
 	top:150px;
 	left:100px;
 }
-
 
 
 /*---------Front End Report-----------*/
@@ -327,7 +323,9 @@ ul.navigation li.icon {
 		font-weight:bold;
 		left:220px;
 		top:870px;
-	}	
+	}
+
+	/*Positioning each link for mobiles*/	
 
 	a.fe{
 		top:1020px;
@@ -546,8 +544,8 @@ ul.navigation li.icon {
 	}
 
 	/*Adding a hover effect*/
-	ul.navigation li a:hover {
-		background-color: #555;
+	ul.navigation li a:hover{
+		background-color: #FF9900;
 	}
 
 	/*Links to hide until correct screensize*/
