--- a/styles/social.css
+++ b/styles/social.css
@@ -125,23 +125,23 @@ h2
 
 /*Social websites logo positioning*/
 #fblogo{
-  position: absolute;
+  position: relative;
   left:780px;
   top:200px;
   border:3px solid #021a40;
 }
 
 #lilogo{
-  position: absolute;
-  left:780px;
+  position: relative;
+  left:470px;
   top:400px;
   border:3px solid #021a40;
 }
 
 #inlogo{
- position: absolute;
- left:780px;
- top:600px;
+ position: relative;
+ left:160px;
+ top:620px;
  border:3px solid #021a40;
 }
 
@@ -150,10 +150,6 @@ h2
 
 /*Whilst the width is below 600px do the following*/
 @media screen and (max-width:600px) {
-
-  body{
-    overflow-x:hidden;
-  }
 
   footer{
     display:none;
@@ -182,11 +178,11 @@ h2
 
   /*How the list should be displayed one the expand button is clicked*/
 
-  ul.navigation.responsive{
+ ul.navigation.responsive{
     position: relative;
     padding-top:0px;
     width: 100%;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255,255,255,0.1);
   }
 
   ul.navigation.responsive li.icon {
@@ -202,7 +198,6 @@ h2
 
   ul.navigation.responsive li a {
     display: block;
-    color:#000000;
     text-align: center;
   }
 
@@ -237,24 +232,25 @@ h2
   }
 
   header{
-    font-size: 15px;
-    left:90px;
-    top:680px;
+    font-size: 12px;
+    left:40px;
+    top:580px;
   }
 
   #fblogo{
-    left:140px;
-    top:150px;
+    left:40px;
+    top:0px;
   }
 
   #lilogo{
-    left:140px;
-    top:350px;
+    left:40px;
+    top:50px;
   }
 
   #inlogo{
-    left:140px;
-    top:550px;
+    left:40px;
+    top:100px;
+    margin-bottom: 50px;
   }
 
 
@@ -319,13 +315,13 @@ h2
   }
 
   #lilogo{
-    left:250px;
+    left:-60px;
     top:400px;
   }
 
   #inlogo{
     left:250px;
-    top:600px;
+    top:500px;
   }
 
   footer{
