--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -3,17 +3,34 @@ body {
 	color: #FFFFFF;
 	background-image: url("../images/background.jpg");
 	margin: 0;
-	overflow:hidden;
 }
 
-header {
-	font-size: 40px;
+.title{
 	position: absolute;
-	color:#FFFFFF;
-	left: 600px;
-	top:300px;
+	top: 350px;
+	left:400px;
+	width: 20em;
+	margin: 0 auto;
+	border-right: 2px solid rgba(255,255,255,.75);
+	font-size: 85px;
+	text-align: center;
 	white-space: nowrap;
 	font-weight:700;
+	overflow: hidden;
+}
+
+/* Animation */
+.typewriter{
+	animation: typewriter 4s steps(44) 1s 1 normal both,
+	blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+	from{width: 0;}
+	to{width: 12em;}
+}
+@keyframes blinkTextCursor{
+	from{border-right-color: rgba(255,255,255,.75);}
+	to{border-right-color: transparent;}
 }
 
 footer{
@@ -32,6 +49,7 @@ footer{
 	position: absolute;
 	left: 750px;
 	top: 500px;
+	white-space: nowrap;
 }
 
 a.CV{
@@ -101,12 +119,18 @@ ul.navigation li.icon {
 /*Whilst the width is below 600px do the following*/
 @media screen and (max-width:600px) {
 
-
-	header {
-		font-size: 16px;
-		left: 70px;
-		top:220px;
+	.title{
+		top: 250px;
+		left:0px;
+		font-size:40px;
 	}
+
+	@keyframes typewriter{
+	from{width: 0;}
+	to{width: 10em;}
+}
+
+
 	footer{
 		display:none;
 	}
@@ -166,14 +190,14 @@ ul.navigation li.icon {
 /*Whilst the width is between 600px and 940px do the following*/
 @media screen and (min-width: 600px) and (max-width: 940px){
 
-	header {
-		font-size: 28px;
-		left: 150px;
-		top:300px;
+	.title{
+		top: 300px;
+		left:10px;
+		font-size:70px;
 	}
 
 	.buttons{
-		left: 220px;
+		left: 250px;
 		top: 450px;
 	}
 
